z-index fix

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -24,7 +24,7 @@
     background-color: rgba(255, 255, 255, 0.01);
     -webkit-backdrop-filter: blur(1rem);
     backdrop-filter: blur(1rem);
-    z-index: 1;
+    z-index: 99;
     width: 100%;
     gap: 0.75rem;
     padding: 0.75rem;
